# TrEnCo

./: LICENSE  README.md  pyproject.toml
examples/: mip_on_train.py  mip_on_train_acc_fico.py  mip_on_train_acc_iris.py  mip_on_train_exact_fico.py  mip_on_train_exact_iris.py
examples/fico/: FICO.full.csv  mip_on_train_acc_fico.py  mip_on_train_exact_fico.py
examples/iris/: mip_on_train_acc_iris.py  mip_on_train_exact_iris.py
examples/resources/datasets/FICO/: FICO.featurelist.csv
trenco/: .gitignore  __init__.py
trenco/datasets/: __init__.py  path.py
trenco/datasets/laoders/: __init__.py  adult_income.py
trenco/datasets/resources/Adult-Income/: Adult-Income.featurelist.csv  Adult-Income.full.csv
trenco/ensemble/: __init__.py  _typing.py  _utils.py
trenco/feature/: __init__.py  encoder.py  typing.py
trenco/model/: __init__.py
trenco/model/ensemble/: __init__.py  classifier.py
trenco/model/pruning/: __init__.py  abc.py  mip.py
trenco/pruning/: __init__.py  base.py  faithfull.py  greedy.py  mip.py  random.py  utils.py
trenco/pruning/greedy/: __init__.py  _utils.py  exact.py
trenco/pruning/mip/: __init__.py  _utils.py  acc.py  exact.py  oracle.py
trenco/separation/: __init__.py  base.py  mip.py
trenco/tree/: __init__.py  manager.py
trenco/typing/: __init__.py  comparator.py  feature.py  sample.py
trenco/utils/data/: __init__.py  dataset.py  feature.py  loader.py
