[tool.poetry]
name = "trenco"
version = "0.1.0"
description = "A simple module for pruning tree ensemble models."
authors = [
    "Youssouf Emine <youssouf.emine@polymtl.ca>",
]
readme = "README.md"
license = "MIT"
keywords = ["tree", "ensemble", "compression", "machine", "learning"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/youssouf1994/TrEnCo"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
gurobipy = "^11.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
