[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "trenco"
version = "1.0.0"
description = "TrEnCo: an efficient and accurate tool for compressing ensembles"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Youssouf Emie", email = "youssouf.emine@polymtl.ca"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "gurobipy",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/TrEnCo-Org/TrEnCo"